--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ body{
     justify-content:center;
     align-items:center;
     background:linear-gradient(135deg,#ff9a9e,#fad0c4);
+    overflow:hidden;
 }
 
 .card{
@@ -22,7 +23,9 @@ body{
     border-radius:25px;
     text-align:center;
     box-shadow:0 25px 50px rgba(0,0,0,0.2);
-    width:320px;
+    width:340px;
+    position:relative;
+    z-index:2;
 }
 
 h1{
@@ -49,15 +52,26 @@ button:hover{
     transform:scale(1.05);
 }
 
-/* Individual button colors */
 .rose{ background:#e63946; color:white; }
 .propose{ background:#ff4d8d; color:white; }
 .choco{ background:#5a3825; color:white; }
 
-.footer{
+.message{
     margin-top:20px;
-    font-size:12px;
-    color:#777;
+    font-size:18px;
+    font-weight:bold;
+}
+
+/* Falling emojis */
+.fall{
+    position:fixed;
+    top:-10vh;
+    font-size:28px;
+    animation:drop linear forwards;
+}
+
+@keyframes drop{
+    to{ transform:translateY(110vh); }
 }
 </style>
 </head>
@@ -68,23 +82,42 @@ button:hover{
     <h1>Valentine Week 💖</h1>
 
     <div class="buttons">
-        <button class="rose" onclick="location.href='rose-day.html'">
-            🌹 Rose Day
-        </button>
-
-        <button class="propose" onclick="location.href='propose-day.html'">
-            💍 Propose Day
-        </button>
-
-        <button class="choco" onclick="location.href='chocolate-day.html'">
-            🍫 Chocolate Day
-        </button>
+        <button class="rose" onclick="roseShower()">🌹 Rose Day</button>
+        <button class="propose" onclick="showPropose()">💍 Propose Day</button>
+        <button class="choco" onclick="chocoShower()">🍫 Chocolate Day</button>
     </div>
 
-    <div class="footer">
-        Made with love 😌
-    </div>
+    <div class="message" id="message"></div>
 </div>
+
+<script>
+function roseShower(){
+    for(let i=0;i<40;i++){
+        let r=document.createElement("div");
+        r.className="fall";
+        r.innerHTML="🌹";
+        r.style.left=Math.random()*100+"vw";
+        r.style.animationDuration=(3+Math.random()*3)+"s";
+        document.body.appendChild(r);
+    }
+}
+
+function chocoShower(){
+    for(let i=0;i<40;i++){
+        let c=document.createElement("div");
+        c.className="fall";
+        c.innerHTML="🍫";
+        c.style.left=Math.random()*100+"vw";
+        c.style.animationDuration=(3+Math.random()*3)+"s";
+        document.body.appendChild(c);
+    }
+}
+
+function showPropose(){
+    document.getElementById("message").innerHTML =
+    "I propose that you look just hot and sexy and kinky and pretty all the time 😌💖";
+}
+</script>
 
 </body>
 </html>
