--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body{
     border-radius:25px;
     text-align:center;
     box-shadow:0 25px 50px rgba(0,0,0,0.2);
-    width:340px;
+    width:350px;
     position:relative;
     z-index:2;
 }
@@ -82,9 +82,9 @@ button:hover{
     <h1>Valentine Week 💖</h1>
 
     <div class="buttons">
-        <button class="rose" onclick="roseShower()">🌹 Rose Day</button>
-        <button class="propose" onclick="showPropose()">💍 Propose Day</button>
-        <button class="choco" onclick="chocoShower()">🍫 Chocolate Day</button>
+        <button class="rose" onclick="roseShower()">🌹 Happy Rose Day</button>
+        <button class="propose" onclick="showPropose()">💍 Happy Propose Day</button>
+        <button class="choco" onclick="chocoShower()">🍫 Happy Chocolate Day</button>
     </div>
 
     <div class="message" id="message"></div>
@@ -115,7 +115,7 @@ function chocoShower(){
 
 function showPropose(){
     document.getElementById("message").innerHTML =
-    "I propose that you look just hot and sexy and kinky and pretty all the time 😌💖";
+    "I propose that you look just as much hot and sexy and kinky and pretty all the time 😌💖";
 }
 </script>
 
